# o-parser-dev-test

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  manage.py  prestart.sh  pyproject.toml
django_ozon_parser/: asgi.py  celery.py  settings.py  urls.py  wsgi.py  yasg.py
parsers/: abstract_parser.py  ozon_parser.py  test_script.py  utils.py
products_api/: admin.py  apps.py  bot_alerts.py  models.py  paginator.py  serializers.py  tasks.py  urls.py  views.py
products_api/migrations/: 0001_initial.py  0002_auto_20230803_1750.py  0003_auto_20230803_1754.py
products_api/parsers/: abstract_parser.py  ozon_parser.py  test.py  test_script.py  utils.py
