[tool.poetry]
name = "django-ozon-parser"
version = "0.1.0"
description = ""
authors = ["Rusih100 <rusih100@gmail.com>"]
readme = "README.md"
packages = [{include = "django_ozon_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
django-mysql = "^4.11.0"
mysqlclient = "^2.2.0"
selenium = "^4.11.2"
celery = {extras = ["redis"], version = "^5.3.1"}
requests = "^2.31.0"
drf-yasg = "^1.21.7"
django-adminlte3 = "^0.1.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.black]
line-length = 80
target-version = ['py310']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | env
  | venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
line_length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
